@@ -36,7 +36,6 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Clock;
@@ -102,7 +101,9 @@ class NodeTest {
   private Tracer tracer;
   private EventBus bus;
   private LocalNode local;
+  private LocalNode local2;
   private Node node;
+  private Node node2;
   private ImmutableCapabilities stereotype;
   private ImmutableCapabilities caps;
   private URI uri;
@@ -150,6 +151,7 @@ class NodeTest {
       builder = builder.enableManagedDownloads(true).sessionTimeout(Duration.ofSeconds(1));
     }
     local = builder.build();
+    local2 = builder.build();
 
     node =
         new RemoteNode(
@@ -159,6 +161,16 @@ class NodeTest {
             uri,
             registrationSecret,
             local.getSessionTimeout(),
+            ImmutableSet.of(caps));
+
+    node2 =
+        new RemoteNode(
+            tracer,
+            new PassthroughHttpClient.Factory(local2),
+            new NodeId(UUID.randomUUID()),
+            uri,
+            registrationSecret,
+            local2.getSessionTimeout(),
             ImmutableSet.of(caps));
   }
 
@@ -371,13 +383,30 @@ class NodeTest {
     assertThatEither(response).isRight();
     Session session = response.right().getSession();
 
+    Either<WebDriverException, CreateSessionResponse> response2 =
+        node2.newSession(createSessionRequest(caps));
+    assertThatEither(response2).isRight();
+    Session session2 = response2.right().getSession();
+
+    // Assert that should respond to commands for sessions Node 1 owns
     HttpRequest req = new HttpRequest(POST, String.format("/session/%s/url", session.getId()));
     assertThat(local.matches(req)).isTrue();
     assertThat(node.matches(req)).isTrue();
 
-    req = new HttpRequest(POST, String.format("/session/%s/url", UUID.randomUUID()));
-    assertThat(local.matches(req)).isFalse();
-    assertThat(node.matches(req)).isFalse();
+    // Assert that should respond to commands for sessions Node 2 owns
+    HttpRequest req2 = new HttpRequest(POST, String.format("/session/%s/url", session2.getId()));
+    assertThat(local2.matches(req2)).isTrue();
+    assertThat(node2.matches(req2)).isTrue();
+
+    // Assert that should not respond to commands for sessions Node 1 does not own
+    HttpResponse res1 = node.execute(req2);
+    assertThat(res1.getStatus()).isEqualTo(404);
+    assertThat(Contents.string(res1)).contains("invalid session id");
+
+    // Assert that should not respond to commands for sessions Node 2 does not own
+    HttpResponse res2 = node2.execute(req);
+    assertThat(res2.getStatus()).isEqualTo(404);
+    assertThat(Contents.string(res2)).contains("invalid session id");
   }
 
   @Test
@@ -887,7 +916,7 @@ class NodeTest {
     try {
       File f = new File(directory.getAbsolutePath(), UUID.randomUUID().toString());
       f.deleteOnExit();
-      Files.write(directory.toPath(), content.getBytes(StandardCharsets.UTF_8));
+      Files.writeString(directory.toPath(), content);
       return f;
     } catch (IOException e) {
       throw new RuntimeException(e);
@@ -898,7 +927,7 @@ class NodeTest {
     try {
       File f = File.createTempFile("webdriver", "tmp");
       f.deleteOnExit();
-      Files.write(f.toPath(), content.getBytes(StandardCharsets.UTF_8));
+      Files.writeString(f.toPath(), content);
       return f;
     } catch (IOException e) {
       throw new UncheckedIOException(e);
